test/golden/testSLASHfailureCasesSLASHbug18.hs.golden

INITIALPATH:26:3: error: [-Wmissing-fields, -Werror=missing-fields]
    • Fields of ‘Foo’ not initialised: fieldA
    • In the expression: Foo {fieldB = (Data.String.fromString ("hello what's up " <> ((((PyF.Internal.QQ.formatAny PyF.Formatters.Minus) PyF.Internal.QQ.PaddingDefaultK) Nothing) Nothing) x))}
      In an equation for ‘yolo’:
          yolo
            = Foo {fieldB = (Data.String.fromString ("hello what's up " <> ((((PyF.Internal.QQ.formatAny PyF.Formatters.Minus) PyF.Internal.QQ.PaddingDefaultK) Nothing) Nothing) x))}
            where
                x :: T.Text
                x = T.pack "hi"
   |
26 |   Foo
   |   ^^^...

INITIALPATH:33:1: error: [-Wmissing-signatures, -Werror=missing-signatures] Top-level binding with no type signature: main :: IO ()
   |
33 | main = print yolo
   | ^^^^
